--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,13 +40,14 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.cookingfox:eventbus-adapter-java:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Dexter permisos
     implementation 'com.karumi:dexter:6.2.2'
+
+    //PDF writter
+    //implementation 'com.itextpdf:itext7-core:7.1.11'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -70,15 +71,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
-    //events - main thread
-    implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation "com.squareup.retrofit2:converter-scalars:2.4.0"
 }
