--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
+        def nav_version = "2.3.2"
         classpath 'com.google.gms:google-services:4.3.4'
         classpath "com.android.tools.build:gradle:4.1.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +20,7 @@ allprojects {
         google()
         jcenter()
         maven {
-            url "https://maven.google.com"
+            url "https://dl.bintray.com/susonthapa/curved-bottom-navigation"
         }
 
     }
